src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwP0.25-dhP0.5.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { proportion 0.25; }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 800 × 600, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
